# carRecording

./: dist.env  docker-compose.yml  pyproject.toml  socket_client.html
app/: background_tasks.py  dependencies.py  events.py  file_validation.py  main.py  routes.py  s3_manager.py  schemas.py  settings.py
