[tool.poetry]
name = "carrecording"
version = "0.1.0"
description = ""
authors = ["yelenskaya <v.yelenskaya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
boto3 = "^1.26.23"
python-multipart = "^0.0.5"
orjson = "^3.8.3"

[tool.poetry.dev-dependencies]
factory-boy = "^3.2.1"
flake8 = "^6.0.0"
flake8-import-order = "^0.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
